--- a/price.html
+++ b/price.html
@@ -141,7 +141,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-text text-center">
-                        <h2>Recipe</h2>
+                        <h2>Prices</h2>
                     </div>
                 </div>
             </div>
@@ -155,11 +155,12 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading">
-                        <h3>Menu</h3>
+                        <h2>MENU</h2>
                     </div>
                 </div>
             </div>
 
+            <h3>TEA</h3>
             <div class="row">
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
@@ -240,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-
+                
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
@@ -484,50 +485,6 @@
             </div>
         </div>
     </section>
-    <!-- ##### Contact Form Area Start ##### -->
-    <div class="contact-area section-padding-0-80">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading">
-                        <h3>Get In Touch</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="contact-form-area">
-                        <form action="#" method="post">
-                            <div class="row">
-                                <div class="col-12 col-lg-6">
-                                    <input type="text" class="form-control" id="name" placeholder="Name">
-                                </div>
-                                <div class="col-12 col-lg-6">
-                                    <input type="email" class="form-control" id="email" placeholder="E-mail">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                </div>
-                                <div class="col-12">
-                                    <textarea name="message" class="form-control" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-12 text-center">
-                                    <button class="btn delicious-btn mt-30" type="submit">Send</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ##### Contact Form Area End ##### -->
-
-    <!-- ##### Google Maps ##### -->
-    <div class="map-area">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6662562945844!2d101.41799911470058!3d0.5002368996350417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a9465c4806a5%3A0x4179ccd027f2df4e!2sLiving+World+Pekanbaru!5e0!3m2!1sen!2sid!4v1563114904335!5m2!1sen!2sid" width="1518" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
     <div class="follow-us-instagram">
