--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-text text-center">
-                        <h2>Recipe</h2>
+                        <h2>Contact</h2>
                     </div>
                 </div>
             </div>
