--- a/price.html
+++ b/price.html
@@ -241,7 +241,11 @@
                         </div>
                     </div>
                 </div>
-                
+
+                <!-- Single Best Receipe Area -->
+                <p></p>
+                <h3>MILK</h3>
+                <div class="row">
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
@@ -322,6 +326,10 @@
                     </div>
                 </div>
 
+               <!-- Single Best Receipe Area -->
+                <p></p>
+                <h3>COFFE</h3>
+                <div class="row">
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
@@ -402,6 +410,9 @@
                     </div>
                 </div>
 
+                <p></p>
+                <h3>SIGNATURE</h3>
+            <div class="row">
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
@@ -449,7 +460,7 @@
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
-                                <h5>Rp.20000</h5>  
+                                <h5>Rp.20000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -481,7 +492,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </section>
