--- a/price.html
+++ b/price.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Shibu | Contact</title>
+    <title>Shibu | Prices</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/bg-img/logo.jpg">
@@ -249,11 +249,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="200px">
+                        <img src="img/bg-img/Capture.jpg" alt="" width="200px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Signature Chocolate</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Matcha</h5>
+                                <h5>Rp.26000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
