--- a/price.html
+++ b/price.html
@@ -419,8 +419,8 @@
                         <img src="img/bg-img/rc1.jpg" alt="" width="200px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Signature Chocolate</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Shizuka</h5>
+                                <h5>Rp.26000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
