--- a/price.html
+++ b/price.html
@@ -165,11 +165,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="200px">
+                        <img src="img/bg-img/lemon.png" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Signature Chocolate</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Lemon Green Tea</h5>
+                                <h5>Rp.16000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -185,7 +185,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc2.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc2.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Lemon Charcoal</h5>
@@ -205,7 +205,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -225,7 +225,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -249,7 +249,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/Capture.jpg" alt="" width="200px">
+                        <img src="img/bg-img/Capture.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Matcha</h5>
@@ -269,11 +269,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc2.jpg" alt="" width="200px">
+                        <img src="img/bg-img/purple.png" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Lemon Charcoal</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Purple Sweet Potato</h5>
+                                <h5>Rp.26000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -289,7 +289,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -309,7 +309,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -333,7 +333,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc1.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Signature Chocolate</h5>
@@ -353,7 +353,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc2.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc2.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Lemon Charcoal</h5>
@@ -373,7 +373,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -393,7 +393,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -410,17 +410,18 @@
                     </div>
                 </div>
 
+                <!-- Single Best Receipe Area -->
                 <p></p>
                 <h3>SIGNATURE</h3>
-            
+                <div class="row">
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc1.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Shizuka</h5>
-                                <h5>Rp.26000</h5>
+                                <h5>Signature Chocolate</h5>
+                                <h5>Rp.20000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -436,7 +437,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc2.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc2.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Lemon Charcoal</h5>
@@ -456,7 +457,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -476,7 +477,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="200px">
+                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Galaxy Lemonade</h5>
@@ -492,6 +493,7 @@
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </div>
