--- a/price.html
+++ b/price.html
@@ -417,11 +417,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="300px">
+                        <img src="img/bg-img/choco.png" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Signature Chocolate</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Choco Maguma</h5>
+                                <h5>Rp.28000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
