--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
                                     <input type="text" class="form-control" id="subject" placeholder="Pekerjaan">
                                 </div>
                                 <div class="col-12">
-                                    <textarea name="Kritik/Saran" class="form-control" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                                    <textarea name="Kritik/Saran" class="form-control" id="message" cols="30" rows="10" placeholder="Pesan"></textarea>
                                 </div>
                                 <div class="col-12 text-center">
                                     <button class="btn delicious-btn mt-30" type="submit">Kirim</button>
