--- a/blog-post.html
+++ b/blog-post.html
@@ -259,10 +259,10 @@
                             <!-- Form -->
                             <div class="newsletter-form bg-img bg-overlay" style="background-image: url(img/bg-img/bg1.jpg);">
                                 <form action="#" method="post">
-                                    <input type="email" name="email" placeholder="Subscribe to newsletter">
+                                    <input type="email" name="email" placeholder="Subscribe to us">
                                     <button type="submit" class="btn delicious-btn w-100">Subscribe</button>
                                 </form>
-                                <p>Fusce nec ante vitae lacus aliquet vulputate. Donec sceleri sque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</p>
+                                <p>Silahkan masukkan email anda untuk mendapat notifikasi dari kami :)</p>
                             </div>
                         </div>
 
@@ -287,7 +287,7 @@
     <!-- ##### Blog Area End ##### -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
-    <div class="follow-us-instagram">
+     <div class="follow-us-instagram">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -299,19 +299,19 @@
         <div class="insta-feeds d-flex flex-wrap">
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta1.jpg" alt="">
+                <img src="img/bg-img/Matcha.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/BqhU8HUlmpW/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta2.jpg" alt="">
+                <img src="img/bg-img/capture.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/ByGPYhzpAWV/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -320,16 +320,16 @@
                 <img src="img/bg-img/insta3.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"></a>
                 </div>
             </div>
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta4.jpg" alt="">
+                <img src="img/bg-img/rc4.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -338,25 +338,25 @@
                 <img src="img/bg-img/insta5.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"></a>
                 </div>
             </div>
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta6.jpg" alt="">
+                <img src="img/bg-img/psp.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/BqhU5pIluvm/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta7.jpg" alt="">
+                <img src="img/bg-img/hsh.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/BqhU3VyFDms/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
