--- a/price.html
+++ b/price.html
@@ -289,11 +289,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
+                        <img src="img/bg-img/rc1.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Galaxy Lemonade</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Signature Chocolate</h5>
+                                <h5>Rp.28000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -309,11 +309,11 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc3.jpg" alt="" width="300px">
+                        <img src="img/bg-img/hsh.jpg" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Galaxy Lemonade</h5>
-                                <h5>Rp.20000</h5>
+                                <h5>Houjicha Latte</h5>
+                                <h5>Rp.26000</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -333,10 +333,10 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/rc1.jpg" alt="" width="300px">
+                        <img src="img/bg-img/coffema.png" alt="" width="300px">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Signature Chocolate</h5>
+                                <h5>Coffe Matcha</h5>
                                 <h5>Rp.20000</h5>
                             </a>
                             <div class="ratings">
