--- a/receipe-post.html
+++ b/receipe-post.html
@@ -240,12 +240,10 @@
                 <div class="row">
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5">
-                            <span>April 05, 2018</span>
-                            <h2>Vegetarian cheese salad</h2>
+                            
+                            <h2>Purple Sweet Potato</h2>
                             <div class="receipe-duration">
-                                <h6>Prep: 15 mins</h6>
-                                <h6>Cook: 30 mins</h6>
-                                <h6>Yields: 8 Servings</h6>
+                            
                             </div>
                         </div>
                     </div>
@@ -264,11 +262,11 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <!-- Single Preparation Step -->
-                        <div class="single-preparation-step d-flex">
-                            <h4>01.</h4>
+                 <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-best-receipe-area mb-30">
+                        <img src="img/bg-img/rc1.jpg" alt="">
+                        <div class="receipe-content">
+                            <a href="receipe-post.html">
                             <p>Kalau kamu perhatikan, menu Taro Bubble Tea memang selalu jadi yang paling dicari di kafe-kafe milk tea. Kayaknya, belum lengkap sebuah kafe milk tea kalau belum ada pilihan rasa taro di dalam deretan pilihan minumannya. Rasanya yang lucu emang wajar kalau bikin banyak orang ketagihan. Yuk coba buat sendiri taro milk tea kreasimu.
 
 Bahan untuk membuatnya:
