--- a/receipe-post.html
+++ b/receipe-post.html
@@ -234,15 +234,13 @@
         </div>
 
         <!-- Receipe Content Area -->
-        <div class="receipe-content-area">
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-12 col-md-8">
-                        <div class="receipe-headline my-5">
-                            
-                            <h2>Purple Sweet Potato</h2>
-                            <div class="receipe-duration">
+                        <div class="col-12 col-lg-6">
+                    <div class="single-top-catagory">
+                        <img src="img/bg-img/psp.jpg" alt="">
+                        <!-- Content -->
+                        <div class="top-cta-content">
+                            <h3>Purple Sweet Potato</h3>
+                            <h6>Simple &amp; Delicios</h6>
                             
                             </div>
                         </div>
