--- a/receipe-post.html
+++ b/receipe-post.html
@@ -268,20 +268,41 @@ Karbon aktif mengandung kandungan antioksidan tinggi yang dapat meningkatkan tin
                     </div>
                 </div>
                             
+                        <section class="best-receipe-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading">
+                        <h3>Receipe Menu</h3>
+                    </div>
+                </div>
+            </div>
+
+        <!-- Receipe Content Area -->
+        <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-best-receipe-area mb-30">
+                        <img src="img/bg-img/rc2.jpg" alt="">
+                        <div class="receipe-content">
+                            <a href="receipe-post.html">
+                                <h4>01.</h4>
+                            <p>Tambahkan bubuk charcoal dan air jeruk nipis ke dalam gelas air hangat, aduk rata dan konsumsilah minuman ini setiap pagi saat perut dalam keadaan kosong.
+
+Obat alami ini membantu mengurangi lemak perut, penelitian yang dilakukan pada charcoal memiliki kemampuan membuat perut datar.
+
+Karbon aktif mengandung kandungan antioksidan tinggi yang dapat meningkatkan tingkat metabolisme dan semua timbunan lemak di daerah perut. </p>
+                                <h5>Lemon Charcoal</h5>
+
+                            </a>
+                            <div class="ratings">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <!-- Single Preparation Step -->
-                        <div class="single-preparation-step d-flex">
-                            
-                        </div>
-                        <!-- Single Preparation Step -->
-                        <div class="single-preparation-step d-flex">
-                            <h4>02.</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
                         </div>
                         <!-- Single Preparation Step -->
                         <div class="single-preparation-step d-flex">
