--- a/receipe-post.html
+++ b/receipe-post.html
@@ -256,7 +256,19 @@ Obat alami ini membantu mengurangi lemak perut, penelitian yang dilakukan pada c
 Karbon aktif mengandung kandungan antioksidan tinggi yang dapat meningkatkan tingkat metabolisme dan semua timbunan lemak di daerah perut. </p>
                                 <h5>Lemon Charcoal</h5>
 
-                           
+                            </a>
+                            <div class="ratings">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                            
+
         <!-- Receipe Content Area -->
         <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
