--- a/elements.html
+++ b/elements.html
@@ -405,7 +405,7 @@
     <!-- ***** Elements Area End ***** -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
-     <div class="follow-us-instagram">
+    <div class="follow-us-instagram">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -435,7 +435,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -444,7 +444,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -453,14 +453,14 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
                 </div>
             </div>
 
-           <!-- Single Insta Feeds -->
+            <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
                 <img src="img/bg-img/hsh.jpg" alt="">
                 <!-- Icon -->
@@ -490,7 +490,7 @@
                     <div class="footer-social-info text-right">
                         <a href="https://instagram.com/shibu.id"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                   
+                        
                     </div>
                     <!-- Footer Logo -->
                     <div class="footer-logo">
