--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
     <!-- ##### Contact Area End ##### -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
-<div class="follow-us-instagram">
+    <div class="follow-us-instagram">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -282,7 +282,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -291,7 +291,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -300,7 +300,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
