--- a/blog-post2.html
+++ b/blog-post2.html
@@ -289,7 +289,7 @@
     <!-- ##### Blog Area End ##### -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
-     <div class="follow-us-instagram">
+    <div class="follow-us-instagram">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -319,7 +319,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -328,7 +328,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -337,14 +337,14 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
                 </div>
             </div>
 
-           <!-- Single Insta Feeds -->
+            <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
                 <img src="img/bg-img/hsh.jpg" alt="">
                 <!-- Icon -->
