--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -404,7 +404,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -413,7 +413,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
