--- a/receipe-post.html
+++ b/receipe-post.html
@@ -426,7 +426,7 @@ Tuh nggak sulit kan? Sekarang minuman andalan setiap kafe bubble tea juga bisa h
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -435,7 +435,7 @@ Tuh nggak sulit kan? Sekarang minuman andalan setiap kafe bubble tea juga bisa h
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -444,14 +444,14 @@ Tuh nggak sulit kan? Sekarang minuman andalan setiap kafe bubble tea juga bisa h
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
                 </div>
             </div>
 
-           <!-- Single Insta Feeds -->
+            <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
                 <img src="img/bg-img/hsh.jpg" alt="">
                 <!-- Icon -->
@@ -481,7 +481,7 @@ Tuh nggak sulit kan? Sekarang minuman andalan setiap kafe bubble tea juga bisa h
                     <div class="footer-social-info text-right">
                         <a href="https://instagram.com/shibu.id"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  
+                        
                     </div>
                     <!-- Footer Logo -->
                     <div class="footer-logo">
