--- a/receipe-post.html
+++ b/receipe-post.html
@@ -76,6 +76,38 @@
         </div>
 
         <!-- Navbar Area -->
+        <header class="header-area">
+
+        <!-- Top Header Area -->
+        <div class="top-header-area">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-between">
+                    <!-- Breaking News -->
+                    <div class="col-12 col-sm-6">
+                        <div class="breaking-news">
+                            <div id="breakingNewsTicker" class="ticker">
+                                <ul>
+                                    <li><a href="#">Hello World!</a></li>
+
+                                    <li><a href="#">Hello Delicious!</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Top Social Info -->
+                    <div class="col-12 col-sm-6">
+                        <div class="top-social-info text-right">
+                            <a href="https://instagram.com/shibu.id"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Navbar Area -->
         <div class="delicious-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
@@ -99,7 +131,7 @@
                             </div>
 
                             <!-- Nav Start -->
-                            <div class="classynav">
+                           <div class="classynav">
                                  <ul>
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="#">Pages</a>
@@ -124,6 +156,7 @@
                                 <div class="search-btn">
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </div>
+
                             </div>
                             <!-- Nav End -->
                         </div>
