--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                                             <li><a href="blog-post.html">Blog Post</a></li>
                                             <li><a href="receipe-post.html">Receipe Post</a></li>
                                           
-                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="promotion.html">Promotion</a></li>
                                            
                                             </li>
                                         </ul>
