--- a/price.html
+++ b/price.html
@@ -108,7 +108,7 @@
                                             <li><a href="blog-post.html">Blog Post</a></li>
                                             <li><a href="receipe-post.html">Receipe Post</a></li>
 
-                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="Promotion.html">Promotion</a></li>
                                            
                                                
                                         </ul>
@@ -135,19 +135,16 @@
     </header>
     <!-- ##### Header Area End ##### -->
 
-    <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/rc1.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcumb-text text-center">
-                        <h2>Prices</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- Slider image -->
+    <div id="slider">
+    <div id="slide-holder">
+        <div class="slide"><img src="img/bg-img/purple.png" alt="" /></div>
+        <div class="slide"><img src="img/bg-img/rc2.jpg" alt="" /></div>
+        <div class="slide"><img src="img/bg-img/capture.jpg" alt="" /></div>
+        <div class="slide"><img src="img/bg-img/rc1.jpg" alt="" /></div>
     </div>
-    <!-- ##### Breadcumb Area End ##### -->
+</div><br><br>
+    <!-- Slider image END  -->
 
     <!-- ##### Best Receipe Area Start ##### -->
     <section class="best-receipe-area">
