--- a/blog-post2.html
+++ b/blog-post2.html
@@ -289,7 +289,7 @@
     <!-- ##### Blog Area End ##### -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
-     <div class="follow-us-instagram">
+    <div class="follow-us-instagram">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -319,7 +319,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta3.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
@@ -328,7 +328,7 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/rc4.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/ByGO1dBpefy/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -337,19 +337,10 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta5.jpg" alt="">
+                <img src="img/bg-img/polos.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="#"></a>
-                </div>
-            </div>
-
-            <!-- Single Insta Feeds -->
-            <div class="single-insta-feeds">
-                <img src="img/bg-img/psp.jpg" alt="">
-                <!-- Icon -->
-                <div class="insta-icon">
-                    <a href="https://www.instagram.com/p/BqhU5pIluvm/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -359,6 +350,15 @@
                 <!-- Icon -->
                 <div class="insta-icon">
                     <a href="https://www.instagram.com/p/BqhU3VyFDms/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                </div>
+            </div>
+
+            <!-- Single Insta Feeds -->
+            <div class="single-insta-feeds">
+                <img src="img/bg-img/psp.jpg" alt="">
+                <!-- Icon -->
+                <div class="insta-icon">
+                    <a href="https://www.instagram.com/p/BqhU5pIluvm/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
