--- a/receipe-post.html
+++ b/receipe-post.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Shibu | Prices</title>
+    <title>Shibu | Receipes</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/bg-img/logo.jpg">
