--- a/receipe-post.html
+++ b/receipe-post.html
@@ -246,7 +246,12 @@ Lemon Curd
 1 sendok teh gula pasir
 1 sendok makan air hangat
 
-<p>Tambahkan bubuk charcoal dan air jeruk nipis ke dalam gelas air hangat, aduk rata dan konsumsilah minuman ini setiap pagi saat perut dalam keadaan kosong.Obat alami ini membantu mengurangi lemak perut, penelitian yang dilakukan pada charcoal memiliki kemampuan membuat perut datar.Karbon aktif mengandung kandungan antioksidan tinggi yang dapat meningkatkan tingkat metabolisme dan semua timbunan lemak di daerah perut.</p>
+<p>Cara membuatnya:
+
+Saring bubuk matcha green tea ke dalam gelas. Masukkan air hangat, campur sampai tidak menggumpal.
+Panaskan susu dan gula sampai muncul busa, tapi jangan sampai mendidih.
+Tuangkan larutan susu ke dalam gelas berisi bubuk matcha secara perlahan, supaya busa bisa berada di bagian teratas.
+Taburkan sejumput bubuk matcha green tea di atas busa.</p>
 
                                 <a href="www.google.com" class="btn delicious-btn mt-1">Read More</a>
                             </div>
