--- a/receipe-post.html
+++ b/receipe-post.html
@@ -352,8 +352,8 @@ Susu coklat tawar dingin 250 ml
                         <div class="single-widget mb-80">
                             <div class="quote-area text-center">
                                 <span>"</span>
-                                <h4>Good communication is just as stimulating as black coffee, and just as hard to sleep after</h4>
-                                <p>Anne Morrow Lindbergh</p>
+                                <h4>Hidup seperti larry !</h4>
+                                <p>-SPONGEBOB-</p>
                                 <div class="date-comments d-flex justify-content-between">
                                     <div class="date">January 04, 2018</div>
                                     <div class="comments">2 Comments</div>
