--- a/receipe-post.html
+++ b/receipe-post.html
@@ -461,7 +461,7 @@ Susu coklat tawar dingin 250 ml
                     </div>
                     <!-- Copywrite -->
                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
+Copyright &copy;<script>document.write(new Date().getFullYear());</script>  By : Erick:) Rafly:) Salma:) and Wisnu:) 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                 </div>
             </div>
