--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     <div class="quote-area text-center">
                         <span>"</span>
                         <h4>HIDUP SEPERTI LARRY !</h4>
-                        <p>=SPONGEBOB-</p>
+                        <p>-SPONGEBOB-</p>
                         <div class="date-comments d-flex justify-content-between">
                             <div class="date">January 04, 2018</div>
                             <div class="comments">2 Comments</div>
@@ -458,7 +458,7 @@
                     </div>
                     <!-- Copywrite -->
                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> By : Erick:) Rafly:) Salma:) and Wisnu:) 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                 </div>
             </div>
